# hiring-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SUBMISSION_CHECKLIST_REPORT.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_all_checks.ps1  validate-submission.sh  validator.py  video_wlyQTeDSbRY_transcript.txt
app/: __init__.py  bias_auditor.py  config.py  data.py  env.py  graders.py  llm_scorer.py  main.py  models.py  policy.py  tasks.py  utils.py
app/fixtures/: candidates.json  interviews.json  roles.json
outputs/: README.md
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  app.py
tests/: test_api.py  test_bias_and_llm.py  test_config.py  test_graders.py  test_inference.py  test_llm_proxy_probe.py  test_tasks.py
